--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,8 +1,8 @@
-#scene {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    touch-action: none;
+body {
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
+
+@import "scene";
+@import "menu-top";
+@import "menu-left";
+@import "footer";
