--- a/src/style/menu-left.scss
+++ b/src/style/menu-left.scss
@@ -14,4 +14,21 @@ nav.left{
 
 
 
+  ul{
+    padding: 0;
+    list-style: none;
+    li{
+      width: 50px;
+      height: 50px;
+
+      &.selected, &:hover{
+        width: 60px;
+      }
+
+    }
+  }
+
+
+
+
 }
