--- a/src/ui/style/root.scss
+++ b/src/ui/style/root.scss
@@ -1,14 +1,9 @@
-#root{
-    //z-index: 1;
+
+.root{
+    z-index: 1;
     font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 
 
-#scene {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  touch-action: none;
-}
+
+
