--- a/articles/samples/6/src/style/index.css
+++ b/articles/samples/6/src/style/index.css
@@ -1,8 +1,12 @@
 #scene {
+    z-index: 1;
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
     touch-action: none;
+}
+#root {
+    z-index: 2;
 }
